--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -18,5 +18,5 @@ jobs:
       - run: flutter build apk --release
       - uses: ncipollo/release-action@v1.12.0
         with:
-         artifacts: "build/app/outputs/flutter-apk/*.apk"
-         token: ${{ secrets.GITHUB_TOKEN }}
+         artifacts: "build/app/outputs/apk/release/app-release.apk"
+         token: ${{ secrets.TOKEN }}
