--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -4,6 +4,7 @@ on: [push]
 jobs:
   releases:
     name: release apk
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -19,4 +20,4 @@ jobs:
       - uses: ncipollo/release-action@v1.12.0
         with:
          artifacts: "build/app/outputs/apk/release/app-release.apk"
-         token: ${{ secrets.TOKEN }}
+         token: ${{ secrets.RELEASE_TOKEN }}
