--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -1,11 +1,15 @@
 name: Flutter Workflow
 
-on: [push]
+on:
+  push:
+    tags:
+      - 'v*'
 jobs:
   releases:
     name: release apk
-    permissions: write-all
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
@@ -19,5 +23,6 @@ jobs:
       - run: flutter build apk --release
       - uses: ncipollo/release-action@v1.12.0
         with:
-         artifacts: "build/app/outputs/apk/release/app-release.apk"
-         token: ${{ secrets.RELEASE_TOKEN }}
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          artifacts: "build/app/outputs/apk/release/app-release.apk"
