--- a/.github/workflows/releases.yml
+++ b/.github/workflows/releases.yml
@@ -23,6 +23,7 @@ jobs:
       - run: flutter build apk --release
       - uses: ncipollo/release-action@v1.12.0
         with:
-          tag_name: ${{ github.ref }}
-          release_name: Release ${{ github.ref }}
+          tag: ${{ github.ref }}
+          name: Release ${{ github.ref }}
           artifacts: "build/app/outputs/apk/release/app-release.apk"
+          token: ${{ secrets.RELEASE_TOKEN }}
