--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   permission_handler: ^10.2.0
+  path_provider: ^2.0.12
 
 dev_dependencies:
   flutter_test:
